rewrite api definition
