# openapi/main.yml
@@ -587,544 +587,26 @@ paths:
     $ref: "./comments/paths/api-comment.yml"
   /api/comment/create/:
     $ref: "./comments/paths/api-comment-create.yml"
+  /api/items/:
+    $ref: "./items/paths/api-items.yml"
   /api/items/create:
     $ref: "./items/paths/api-items-create.yml"
-  /api/items/:
-    get:
-      operationId: items_list
-      summary: 商品一覧取得API
-      description: 商品一覧取得API
-      parameters:
-        - in: query
-          name: buyer
-          schema:
-            type: string
-            format: uuid
-            title: ユーザーID
-        - in: query
-          name: condition
-          schema:
-            type: string
-            enum:
-              - damaged
-              - fine
-              - new
-              - used
-          description: |-
-            * `new` - 未使用
-            * `fine` - 目立った傷や汚れなし
-            * `used` - 使用感あり
-            * `damaged` - 破損あり
-        - in: query
-          name: created_at
-          schema:
-            type: string
-            format: date-time
-        - in: query
-          name: description
-          schema:
-            type: string
-        - in: query
-          name: id
-          schema:
-            type: string
-            format: uuid
-        - in: query
-          name: listing_status
-          schema:
-            type: string
-            enum:
-              - canceled
-              - completed
-              - purchased
-              - unpurchased
-          description: |-
-            * `unpurchased` - 未購入
-            * `purchased` - 購入済み
-            * `completed` - 取引完了
-            * `canceled` - キャンセル済み
-        - in: query
-          name: name
-          schema:
-            type: string
-        - name: page
-          required: false
-          in: query
-          description: A page number within the paginated result set.
-          schema:
-            type: integer
-        - in: query
-          name: price
-          schema:
-            type: integer
-        - in: query
-          name: receivable_campus
-          schema:
-            type: string
-            format: uuid
-        - in: query
-          name: seller
-          schema:
-            type: string
-            format: uuid
-            title: ユーザーID
-        - in: query
-          name: updated_at
-          schema:
-            type: string
-            format: date-time
-        - in: query
-          name: writing_state
-          schema:
-            type: string
-            enum:
-              - little
-              - lot
-              - none
-          description: |-
-            * `none` - 全くない
-            * `little` - 少しある
-            * `lot` - かなりある
-      tags:
-        - items
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PaginatedItemList"
-          description: ""
-    # post:
-    #   operationId: items_create
-    #   summary: 商品登録API
-    #   description: 商品登録API
-    #   tags:
-    #     - items
-    #   requestBody:
-    #     content:
-    #       application/json:
-    #         schema:
-    #           $ref: "#/components/schemas/Item"
-    #       application/x-www-form-urlencoded:
-    #         schema:
-    #           $ref: "#/components/schemas/Item"
-    #       multipart/form-data:
-    #         schema:
-    #           $ref: "#/components/schemas/Item"
-    #     required: true
-    #   security:
-    #     - tokenAuth: []
-    #     - jwtAuth: []
-    #   responses:
-    #     "201":
-    #       content:
-    #         application/json:
-    #           schema:
-    #             $ref: "#/components/schemas/Item"
-    #       description: ""
   /api/items/{id}/:
-    get:
-      operationId: items_retrieve
-      summary: 商品詳細取得API
-      description: 商品詳細取得API
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-          required: true
-      tags:
-        - items
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Item"
-          description: ""
-    # put:
-    #   operationId: items_update
-    #   summary: 商品情報更新API
-    #   description: 商品情報更新API
-    #   parameters:
-    #     - in: path
-    #       name: id
-    #       schema:
-    #         type: string
-    #         format: uuid
-    #       required: true
-    #   tags:
-    #     - items
-    #   requestBody:
-    #     content:
-    #       application/json:
-    #         schema:
-    #           $ref: "#/components/schemas/Item"
-    #       application/x-www-form-urlencoded:
-    #         schema:
-    #           $ref: "#/components/schemas/Item"
-    #       multipart/form-data:
-    #         schema:
-    #           $ref: "#/components/schemas/Item"
-    #     required: true
-    #   security:
-    #     - tokenAuth: []
-    #     - jwtAuth: []
-    #   responses:
-    #     "200":
-    #       content:
-    #         application/json:
-    #           schema:
-    #             $ref: "#/components/schemas/Item"
-    #       description: ""
-    patch:
-      operationId: items_partial_update
-      summary: 商品情報一部更新API
-      description: |
-        商品情報一部更新API<br>
-        multipart/form-data:でリクエストを送信してください。<br>
-        送り方はcreateと一緒です。
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-          required: true
-          description: 商品ID
-        - in: query
-          name: partial
-          schema:
-            type: string
-          description: |
-            True or False, デフォルトはFalse <br>
-            Trueの場合、商品情報の一部のみ更新します。<br>
-            Falseの場合、商品情報を全て更新します。よってすべての情報が必要です。
-      tags:
-        - items
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "200":
-          description: 成功
-    delete:
-      operationId: items_destroy
-      summary: 商品削除API
-      description: 商品削除API
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-          required: true
-      tags:
-        - items
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "204":
-          description: No response body
-  /api/items/{id}/cancel/:
-    put:
-      operationId: items_cancel_update
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-          required: true
-      tags:
-        - items
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Item"
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/Item"
-          multipart/form-data:
-            schema:
-              $ref: "#/components/schemas/Item"
-        required: true
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Item"
-          description: ""
-    patch:
-      operationId: items_cancel_partial_update
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-          required: true
-      tags:
-        - items
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/PatchedItem"
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/PatchedItem"
-          multipart/form-data:
-            schema:
-              $ref: "#/components/schemas/PatchedItem"
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Item"
-          description: ""
-  /api/items/{id}/complete/:
-    put:
-      operationId: items_complete_update
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-          required: true
-      tags:
-        - items
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Item"
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/Item"
-          multipart/form-data:
-            schema:
-              $ref: "#/components/schemas/Item"
-        required: true
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Item"
-          description: ""
-    patch:
-      operationId: items_complete_partial_update
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-          required: true
-      tags:
-        - items
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/PatchedItem"
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/PatchedItem"
-          multipart/form-data:
-            schema:
-              $ref: "#/components/schemas/PatchedItem"
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Item"
-          description: ""
-  /api/items/{id}/like-toggle/:
-    put:
-      operationId: items_like_toggle_update
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-          required: true
-      tags:
-        - items
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Item"
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/Item"
-          multipart/form-data:
-            schema:
-              $ref: "#/components/schemas/Item"
-        required: true
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Item"
-          description: ""
-    patch:
-      operationId: items_like_toggle_partial_update
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-          required: true
-      tags:
-        - items
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/PatchedItem"
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/PatchedItem"
-          multipart/form-data:
-            schema:
-              $ref: "#/components/schemas/PatchedItem"
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Item"
-          description: ""
+    $ref: "./items/paths/api-items-{id}.yml"
   /api/items/{id}/purchase/:
-    put:
-      operationId: items_purchase_update
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-          required: true
-      tags:
-        - items
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Item"
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/Item"
-          multipart/form-data:
-            schema:
-              $ref: "#/components/schemas/Item"
-        required: true
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Item"
-          description: ""
-    patch:
-      operationId: items_purchase_partial_update
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-          required: true
-      tags:
-        - items
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/PatchedItem"
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/PatchedItem"
-          multipart/form-data:
-            schema:
-              $ref: "#/components/schemas/PatchedItem"
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Item"
-          description: ""
-  /api/items/profile/like/:
-    get:
-      operationId: items_profile_like_list
-      parameters:
-        - name: page
-          required: false
-          in: query
-          description: A page number within the paginated result set.
-          schema:
-            type: integer
-      tags:
-        - items
-      security:
-        - tokenAuth: []
-        - jwtAuth: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PaginatedItemList"
-          description: ""
+    $ref: "./items/paths/api-items-{id}-purchase.yml"
+  /api/items/{id}/complete/:
+    $ref: "./items/paths/api-items-{id}-complete.yml"
+  /api/items/{id}/cancel/:
+    $ref: "./items/paths/api-items-{id}-cancel.yml"
+  /api/items/{id}/like-toggle/:
+    $ref: "./items/paths/api-items-{id}-like-toggle.yml"
+  /api/items/user/like/:
+    $ref: "./items/paths/api-items-user-like.yml"
+  /api/items/user/sell/:
+    $ref: "./items/paths/api-items-user-sell.yml"
+  /api/items/user/buy/:
+    $ref: "./items/paths/api-items-user-buy.yml"
   /api/notification/:
     $ref: "./notifications/paths/api-notification.yml"
   /api/messages/:
